Add select2 and examples

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,4 @@
  */
 body { padding-top: 60px; }
 footer { margin-top: 40px; padding-top: 1em; border-top: 1px solid #aaa;}
+section { margin-top: 3em; border-top: 1px solid #eee; padding-top: 1em; }
