Slight change to footer layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,10 @@
         </div><!--/row-->
 
       <footer>
-        <p>&copy; Treehouse 2013</p>.
-        <p>Get the code! <a href="https://github.com/jseifer/rails-select2-example.git">https://github.com/jseifer/rails-select2-example.git</a>.
+        <p>&copy; Treehouse 2013.
+        Get the code! <a href="https://github.com/jseifer/rails-select2-example.git">https://github.com/jseifer/rails-select2-example.git</a>.
+      </p>
+      <br />
       </footer>
 
     </div> <!-- /container -->
